k8s-raw/deployment.yaml
# k8s-raw/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapi
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookapi
  template:
    metadata:
      labels:
        app: bookapi
    spec:
      containers:
        - name: bookapi
          image: ghcr.io/caduostudent/capstoneproject:main
          ports:
            - containerPort: 8000
