k8s-raw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookapi
  namespace: dev
spec:
  selector:
    app: bookapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
