k8s-raw/ingress.yaml
# k8s-raw/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapi-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bookapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookapi
                port:
                  number: 80
